# nlp-with-transformers-notes

./: .gitignore  01_introduction.ipynb  02_text_classification.ipynb  03_transformer_anatomy.ipynb  04_multilingual_ner.ipynb  05_text_generation.ipynb  06_summarization.ipynb  07_question_answering.ipynb  08_transformers_in_production.ipynb  09_dealing_with_few_to_no_labels.ipynb  Makefile  README.md  pyproject.toml
scripts/chapter_02/: classification.py
scripts/chapter_03/: encoder.py
scripts/chapter_04/: multilingual_ner.py
scripts/chapter_06/: summarization.py
