[tool.pdm]

[project]
name = ""
version = ""
description = ""
authors = [
    {name = "Alexandre Henrique", email = "alexandre.hsd@gmail.com"},
]
dependencies = [
    "tensorflow",
    "transformers>=4.28.1",
    "datasets>=2.12.0",
    "tokenizers>=0.13.3",
]
requires-python = ">=3.9"
license = {text = "MIT"}
