[tool.pdm]

[tool.pdm.dev-dependencies]
study = [
    "ipywidgets>=8.1.2",
    "mkdocs>=1.6.0",
    "bertviz>=1.4.0",
]
[project]
name = ""
version = ""
description = ""
authors = [
    {name = "Alexandre Henrique", email = "alexandre.hsd@gmail.com"},
]
dependencies = [
    "numpy",
    "pandas",
    "matplotlib",
    "seaborn",
    "scipy",
    "tensorflow",
    "transformers>=4.28.1",
    "datasets>=2.12.0",
    "tokenizers>=0.13.3",
    "tf-keras>=2.16.0",
    "sentencepiece>=0.2.0",
    "torch>=2.2.2",
    "scikit-learn>=1.5.0",
    "accelerate>=0.30.1",
    "seqeval>=1.2.2",
    "nltk>=3.8.1",
    "sacrebleu>=2.4.2",
    "rouge-score>=0.1.2",
    "py7zr>=0.21.0",
    "farm-haystack>=1.26.2",
    "onnxruntime>=1.18.1",
    "onnx>=1.16.1",
]
requires-python = ">=3.9"
license = {text = "MIT"}
